# build_tests-cmake-qt5

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Gui.cpp  Gui.h  Main.cpp  main.ui
